Added collecting user statistic to csv file.

--- a/cafe.properties
+++ b/cafe.properties
@@ -1,2 +1,6 @@
 countCashiers=2
+cashierStatisticMinutes=1
+userStatisticMinutes=2
+mainStatisticMinutes=60
 cashierStatisticFilename=file1
+userStatisticFilename=file2
