--- a/cafe.properties
+++ b/cafe.properties
@@ -1,6 +1,7 @@
 countCashiers=2
+countCustomers=15
 cashierStatisticMinutes=1
 userStatisticMinutes=2
-mainStatisticMinutes=6
+mainStatisticMinutes=3
 cashierStatisticFilename=file1
 userStatisticFilename=file2
